cmake_minimum_required(VERSION 3.1)
project(lastbreath)
find_package (Threads)
set(CMAKE_CXX_FLAGS "-O3 -ggdb")
set(CMAKE_C_FLAGS "-O3 -ggdb")
FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
add_executable(${PROJECT_NAME} lastbreath.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE include)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
#target_include_directories(${PROJECT_NAME})